# paperclip

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  actix-headers.html  actix-operation-meta.html  actix-plugin.html  actix-schema-defaults.html  actix-security.html  actix-status-codes.html  ayu.css  build-script.html  cli.html  compile-checks.html  crates.js  help.html  index.html  rust-toolchain  rustdoc.css  rustfmt.toml  search-index.js  search.js  search_index.json  settings.html  shell.nix  source-files.js  src-files.js
.github/: dependabot.yml
cli-ng/: Cargo.toml
cli-ng/src/: lib.rs
cli-ng/src/v3/: mod.rs  operation.rs  parameter.rs  property.rs
cli-ng/src/v3/templates/: mod.rs
cli-ng/src/v3/templates/default/: Cargo.mustache  api_doc.mustache  mod_clients.mustache  model.mustache  model_doc.mustache
cli-ng/src/v3/templates/default/actix/client/: api_clients.mustache  client.mustache
cli-ng/src/v3/templates/default/actix/server/: api.mustache  handlers.mustache
cli-ng/src/v3/templates/default/tower-hyper/client/: api_clients.mustache  configuration.mustache
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/v3/: mod.rs  operation.rs  parameter.rs  property.rs
codegen/src/v3/templates/: mod.rs
codegen/src/v3/templates/default/: Cargo.mustache  README.md  api_mod.mustache  mod.mustache  model_mod.mustache
codegen/src/v3/templates/default/actix/client/: api_clients.mustache  configuration.mustache
codegen/src/v3/templates/default/tower-hyper/: mod.mustache
codegen/src/v3/templates/default/tower-hyper/client/: body.mustache  client.mustache
core/: Cargo.toml
core/src/: error.rs  im.rs  lib.rs  util.rs
core/src/v2/: actix.rs  extensions.rs  mod.rs  models.rs  resolver.rs  schema.rs
core/src/v3/: external_documentation.rs  info.rs  license.rs  mod.rs  openapi.rs  operation.rs  parameter.rs  paths.rs  reference.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs  tag.rs
core/src/v3/models/: contact.rs  external_documentation.rs  header.rs  info.rs  license.rs  mod.rs  openapi.rs  operation.rs  paths.rs  response.rs  schema.rs  security_scheme.rs  tag.rs
core/tests/: test_model.rs
examples/actix-playground/: Cargo.toml
examples/actix-playground/src/: main.rs
macros/: Cargo.toml
macros/src/: actix.rs  core.rs  lib.rs
macros/src/actix/: mod.rs  operation.rs
openapi/: Cargo.toml
openapi/src/: error.rs  lib.rs
openapi/src/v2/: codegen.rs  im.rs  mod.rs  models.rs  resolver.rs  schema.rs
openapi/src/v2/codegen/: emitter.rs  mod.rs  object.rs  state.rs
openapi/tests/: README.md  pet-v2.yaml  test_emitter.rs  test_k8s.rs  test_pet.rs
openapi/tests/test_k8s/: Cargo.toml  lib.rs
plugins/actix-macros/: Cargo.toml
plugins/actix-macros/src/: lib.rs  operation.rs  schema.rs
plugins/actix-web/: Cargo.toml  RapiDoc  rapidoc  swagger-ui
plugins/actix-web/src/: app.rs  app3.rs  error.rs  lib.rs  web.rs  web3.rs
plugins/actix-web/templates/: swagger-ui.html
plugins/actix-web/tests/: test_app.rs
testgen/: Cargo.toml
testgen/src/: main.rs
testgen/src/autogen/: Cargo.toml
testgen/src/autogen/apis/: actix_server.rs  mod.rs
testgen/src/autogen/apis/app_nodes_api/actix/: mod.rs
testgen/src/autogen/apis/app_nodes_api/actix/client/: mod.rs
testgen/src/autogen/apis/app_nodes_api/actix/server/: handlers.rs  mod.rs
testgen/src/autogen/apis/app_nodes_api/tower/client/: mod.rs
testgen/src/autogen/apis/block_devices_api/actix/client/: mod.rs
testgen/src/autogen/apis/block_devices_api/actix/server/: handlers.rs  mod.rs
testgen/src/autogen/apis/block_devices_api/tower/client/: mod.rs
testgen/src/autogen/apis/children_api/actix/client/: mod.rs
testgen/src/autogen/apis/children_api/actix/server/: handlers.rs  mod.rs
testgen/src/autogen/apis/children_api/tower/client/: mod.rs
testgen/src/autogen/apis/json_grpc_api/actix/client/: mod.rs
testgen/src/autogen/apis/json_grpc_api/actix/server/: handlers.rs  mod.rs
testgen/src/autogen/apis/json_grpc_api/tower/client/: mod.rs
testgen/src/autogen/apis/nexuses_api/: mod.rs
testgen/src/autogen/apis/nexuses_api/actix/client/: mod.rs
testgen/src/autogen/apis/watches_api/tower/: mod.rs
testgen/src/autogen/clients/tower/: body.rs  configuration.rs  mod.rs
testgen/src/autogen/docs/apis/: AppNodes.md  BlockDevices.md  Children.md  JsonGrpc.md  Nexuses.md  Nodes.md  Pools.md  Replicas.md  Snapshots.md  Specs.md  Volumes.md  Watches.md
testgen/src/autogen/docs/models/: AffinityGroup.md  AppNode.md  AppNodeSpec.md  AppNodeState.md  AppNodes.md  BlockDevice.md  BlockDeviceFilesystem.md  BlockDevicePartition.md  Child.md  ChildState.md  ChildStateReason.md  CordonDrainState.md  CordonedState.md  CreateNexusBody.md  CreatePoolBody.md  CreateReplicaBody.md  CreateVolumeBody.md  DrainState.md  ExplicitNodeTopology.md  LabelledTopology.md  Nexus.md  NexusShareProtocol.md  NexusSpec.md  NexusSpecOperation.md  NexusState.md  Node.md  NodeAccessInfo.md  NodeSpec.md  NodeState.md  NodeStatus.md  NodeTopology.md  OfflineReplicaSnapshotState.md  OnlineReplicaSnapshotState.md  Pool.md  PoolSpec.md  PoolState.md  PoolStatus.md  PoolTopology.md  Protocol.md  PublishVolumeBody.md  (+42 more)
testgen/src/autogen/models/: affinity_group.rs  app_node.rs  app_node_spec.rs  app_node_state.rs  app_nodes.rs  block_device.rs  block_device_filesystem.rs  block_device_partition.rs  child.rs  child_state.rs  child_state_reason.rs  cordon_drain_state.rs  cordoned_state.rs  create_nexus_body.rs  create_pool_body.rs  create_replica_body.rs  create_volume_body.rs  drain_state.rs  explicit_node_topology.rs  labelled_topology.rs  mod.rs  nexus.rs  nexus_share_protocol.rs  nexus_spec.rs  nexus_spec_operation.rs  nexus_state.rs  node.rs  node_access_info.rs  node_spec.rs  node_state.rs  node_status.rs  node_topology.rs  offline_replica_snapshot_state.rs  online_replica_snapshot_state.rs  pool.rs  pool_spec.rs  pool_state.rs  pool_status.rs  pool_topology.rs  protocol.rs  (+43 more)
tests/test_k8s/: Cargo.toml  lib.rs  util.rs
(+737 files in other folders)
