[package]
name = "paperclip"
version = "0.5.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
description = "OpenAPI tooling library for type-safe compile-time checked HTTP APIs"
documentation = "https://paperclip.waffles.space/paperclip"
keywords = ["openapi", "api", "swagger", "http", "web"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wafflespeanut/paperclip"
repository = "https://github.com/wafflespeanut/paperclip"
readme = "README.md"
build = "src/build/build.rs"

[[bin]]
name = "paperclip"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
env_logger = { version = "0.7", optional = true }
git2 = { version = "0.13", optional = true }
heck = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
itertools = "0.9"
log = { version = "0.4", optional = true }
paperclip-actix = { path = "plugins/actix-web", version = "0.3.0", optional = true }
paperclip-core = { path = "core", version = "0.3.0" }
paperclip-macros = { path = "macros", version = "0.4.0", optional = true }
parking_lot = { version = ">=0.10,<0.12" }
regex = { version = "1.1", optional = true }
reqwest = { version = "0.10", features = ["blocking"], optional = true }
# rustfmt-nightly = { version = "1.2.2", optional = true }
semver = ">=0.9,<0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = { version = "0.2", optional = true }
tinytemplate = { version = "1.0", optional = true }
url = ">=1.7,<3"
thiserror = "1.0.19"
anyhow = "1.0.31"
once_cell = "1.4.0"

[dev-dependencies]
actix-rt = "1.0"
actix-service = "1.0"
actix-web = "2.0"
chrono_dev = { version = "0.4", features = ["serde"], package = "chrono" }
futures = "0.3"
uuid_dev = { version = "0.8", features = ["serde"], package = "uuid" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
log = { version = "0.4", features = ["kv_unstable"] }
insta = "0.16.1"
env_logger = "0.7.1"

[features]
actix = ["paperclip-macros/actix", "paperclip-actix", "v2"]
actix-nightly = ["actix", "paperclip-actix/nightly", "v2"]
cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
codegen = ["heck", "http", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
# codegen-fmt = ["codegen", "rustfmt-nightly"]
v2 = ["paperclip-macros/v2", "paperclip-core/v2"]

# Features for implementing traits for dependencies.
actix-multipart = ["paperclip-core/actix-multipart"]
chrono = ["paperclip-core/chrono"]
rust_decimal = ["paperclip-core/rust_decimal"]
uuid = ["paperclip-core/uuid"]

[workspace]
members = [
    ".",
    "core",
    "macros",
    "plugins/actix-web",
]

[[test]]
name = "test_app"
required-features = ["actix", "uuid"]

[[test]]
name = "test_codegen"
required-features = ["v2", "codegen"]

[[test]]
name = "test_errors"
required-features = ["v2", "codegen"]
