[package]
name = "paperclip-codegen"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = [ "openapi", "openapiv3", "codegen" ]
description = "Experimental OpenAPI V3.0.3 Code Generator"
homepage = "https://github.com/paperclip-rs/paperclip"
repository = "https://github.com/paperclip-rs/paperclip"

[lib]

[[bin]]
name = "paperclip-cli"
path = "src/bin/codegen/main.rs"

[dependencies]
ramhorns = { version = "1.0", default-features = false, features = ["indexes"], optional = true }
ramhorns-derive = { version = "1.0", optional = true }
openapiv3 = { version = "2.0.0", optional = true }
heck = { version = "0.4", optional = true }
itertools = { version = "0.10", optional = true }

env_logger = "0.8"
log = { version = "0.4", features = ["kv_unstable"] }
structopt = { version = "0.3" }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"


[features]
default = [ "poc" ]
ramhorns-feat = [ "ramhorns", "ramhorns-derive" ]
poc = [ "ramhorns-feat", "openapiv3", "heck", "itertools" ]