[package]
name = "paperclip-core"
version = "0.3.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
description = "Core types and traits for paperclip OpenAPI tooling library"
documentation = "https://paperclip.waffles.space/paperclip_core"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wafflespeanut/paperclip"
repository = "https://github.com/wafflespeanut/paperclip"

[dependencies]
actix-web2 = { version = "2", optional = true, default-features = false, package = "actix-web" }
actix-web3 = { version = "3", optional = true, default-features = false, package = "actix-web" }
actix-multipart = { version = "0", optional = true }
actix-session = { version = "0", optional = true }
chrono = { version = "0", optional = true }
heck = { version = "0.3", optional = true }
once_cell = "1.4"
log = { version = "0.4", optional = true }
mime = "0.3"
paperclip-macros = { path = "../macros", version = "0.4.0" }
parking_lot = { version = ">=0.10,<0.12", features = ["serde"] }
pin-project = { version = "1.0", optional = true }
rust_decimal = { version = "1", optional = true }
regex = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.8"
uuid = { version = "0", optional = true }
thiserror = "1.0"
serde_qs = { version = "0", optional = true }

[features]
# actix-web support
actix = ["actix3"]
actix2 = ["actix-base", "actix-web2"]
actix3 = ["actix-base", "actix-web3"]
actix-base = ["v2", "pin-project"]

# Enable nightly if nightly compiler can be allowed
nightly = ["paperclip-macros/nightly"]

# OpenAPI support (v2 and codegen)
v2 = ["paperclip-macros/v2"]
codegen = ["v2", "heck", "log"]
