[package]
name = "paperclip-core"
version = "0.7.0"
edition = "2018"
description = "Core types and traits for paperclip OpenAPI tooling library"
documentation = "https://paperclip-rs.github.io/paperclip/paperclip_core"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paperclip-rs/paperclip"
repository = "https://github.com/paperclip-rs/paperclip"

[dependencies]
paperclip-macros = { path = "../macros", version = "0.6.3" }
actix-web2 = { version = "2", optional = true, default-features = false, package = "actix-web" }
actix-web3 = { version = "3", optional = true, default-features = false, package = "actix-web" }
actix-web4 = { version = "4", optional = true, default-features = false, package = "actix-web" }
actix-multipart = { version = "0", optional = true }
actix-session = { version = "0", optional = true }
actix-identity = { version = "0", optional = true }
actix-files = { version = "0", optional = true }
chrono = { version = "0.4", optional = true }
heck = { version = "0.4", optional = true }
once_cell = "1.4"
log = { version = "0.4", optional = true }
mime = "0.3"
pin-project-lite = { version = "0.2", optional = true }
rust_decimal = { version = "1", optional = true }
regex = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = { version = "2", optional = true }
uuid0_dep = { version = "0", package = "uuid", optional = true }
uuid1_dep = { version = "1", package = "uuid", optional = true }
thiserror = "1.0"
serde_qs = { version = "0", optional = true }
actix-web-validator2 = { version = "2.2", optional = true, package = "actix-web-validator" }
actix-web-validator3 = { version = "3.0", optional = true, package = "actix-web-validator" }
validator12 = { version = "0.12", features = ["derive"], optional = true, package = "validator" }
validator14 = { version = "0.14", features = ["derive"], optional = true, package = "validator" }
openapiv3 = { version = "2.0", optional = true }

[features]
# actix-web support
actix4 = ["actix-base", "actix-web4"]
actix3 = ["actix-base", "actix-web3"]
actix2 = ["actix-base", "actix-web2"]
actix-base = ["v2", "pin-project-lite"]
actix3-validator = ["actix-web-validator2", "validator12"]
actix4-validator = ["actix-web-validator3", "validator14"]

# Enable nightly if nightly compiler can be allowed
nightly = ["paperclip-macros/nightly"]

# OpenAPI support (v2 and codegen)
v2 = ["paperclip-macros/v2"]
v3 = ["v2", "openapiv3"]
codegen = ["v2", "heck", "log"]
uuid = ["uuid0"]
uuid0 = ["uuid0_dep"]
uuid1 = ["uuid1_dep"]
