[package]
name = "paperclip-macros"
version = "0.2.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
description = "Macros for paperclip OpenAPI tooling library"
documentation = "https://paperclip.waffles.space/paperclip_macros"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wafflespeanut/paperclip"
repository = "https://github.com/wafflespeanut/paperclip"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
heck = { version = "0.3", optional = true }
lazy_static = { version = "1.3", optional = true }
strum = "0.17"
strum_macros = "0.17"

[features]
actix = ["heck", "lazy_static"]
default = ["v2"]
v2 = []
