[package]
name = "paperclip-macros"
version = "0.6.5"
edition = "2018"
description = "Macros for paperclip OpenAPI tooling library"
documentation = "https://paperclip-rs.github.io/paperclip/paperclip_macros"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paperclip-rs/paperclip"
repository = "https://github.com/paperclip-rs/paperclip"

[lib]
proc-macro = true

[dependencies]
mime = "0.3"
proc-macro2 = "1.0"
proc-macro-error2 = "2.0.1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
heck = { version = "0.4", optional = true }
http = { version = "0.2", optional = true }
lazy_static = { version = "1.4", optional = true }
strum = { version = "0.24", optional = true }
strum_macros = { version = "0.24", optional = true }

[features]
actix = ["heck", "http", "lazy_static", "strum", "strum_macros"]
v2 = []
nightly = []
path-in-definition = []
