[package]
name = "paperclip"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
heck = { version = "0.3.1", optional = true }
lazy_static = "1.3.0"
log = "0.4.6"
paperclip-macros = { path = "../macros" }
parking_lot = { version = "0.8.0" }
quote = { version = "0.6.12", optional = true }
regex = "1.1.6"
# rustfmt-nightly = { version = "1.2.2", optional = true }
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde_yaml = "0.8.9"
syn = { version = "0.15.34", features = ["full"], optional = true }

[dev-dependencies]
env_logger = "0.6.1"

[features]
default = ["v2", "codegen"]
v2 = []
codegen = ["heck", "syn", "quote"]
# codegen-fmt = ["codegen", "rustfmt-nightly"]
