[package]
name = "testgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "tower-client-rls", "tower-trace" ]
actix-server = [ "actix" ]
actix-client = [ "actix", "actix-web-opentelemetry", "awc" ]
actix = [ "actix-web", "rustls" ]
tower-client-rls = [ "tower-client", "rustls_feat" ]
tower-client-tls = [ "tower-client", "hyper_tls_feat" ]
tower-client = [ "tower-hyper" ]
tower-hyper = [ "hyper", "tower", "tower-http", "http-body", "futures", "pin-project", "tokio" ]
hyper_tls_feat = [ "hyper-tls", "tokio-native-tls" ]
rustls_feat = [ "rustls", "webpki", "hyper-rustls" ]
tower-trace = [ "opentelemetry-jaeger", "tracing-opentelemetry", "opentelemetry", "opentelemetry-http", "tracing", "tracing-subscriber" ]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = { version = "^2.3", features = ["serde"] }
async-trait = "0.1.64"
dyn-clonable = "0.9.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
serde_urlencoded = "0.7"

# actix dependencies
actix-web = { version = "4.3.0", features = ["rustls"], optional = true }
actix-web-opentelemetry = { version = "0.13.0", optional = true }
awc = { version = "3.1.0", optional = true }

# tower and hyper dependencies
hyper = { version = "0.14.24", features = [ "client", "http1", "http2", "tcp", "stream" ], optional = true }
tower = { version = "0.4.13", features = [ "timeout", "util", "limit" ], optional = true }
tower-http = { version = "0.3.5", features = [ "trace", "map-response-body", "auth" ], optional = true }
tokio = { version = "1.25.0", features = ["full"], optional = true }
http-body = { version = "0.4.5", optional = true }
futures = { version = "0.3.26", optional = true }
pin-project = { version = "1.0.12", optional = true }
# SSL
rustls = { version = "0.20.8", optional = true, features = [ "dangerous_configuration" ] }
rustls-pemfile = "1.0.2"
webpki = { version = "0.22.0", optional = true }
hyper-rustls = { version = "0.23.2", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
# tracing and telemetry
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread"], optional = true  }
tracing-opentelemetry = { version = "0.18.0", optional = true }
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"], optional = true }
opentelemetry-http = { version = "0.7.0", optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }
