[package]
name = "actix-playground"
version = "0.1.0"
authors = ["Maxim Vorobjov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
paperclip = { version = "0.4.1", path = "../..", features = ["actix-nightly", "uuid", "chrono", "actix-operation"] }
serde = "1"
serde_json = "1"
