[package]
name = "paperclip-actix-macros"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
description = "Macros for paperclip OpenAPI actix plugin"
documentation = "https://paperclip.waffles.space/paperclip_actix_macros"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wafflespeanut/paperclip"
repository = "https://github.com/wafflespeanut/paperclip"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6.12"
syn = { version = "0.15.34", features = ["full"] }
heck = "0.3.1"
