[package]
name = "paperclip-actix"
version = "0.4.1"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
description = "Paperclip OpenAPI plugin for actix-web framework"
documentation = "https://paperclip.waffles.space/paperclip_actix"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wafflespeanut/paperclip"
repository = "https://github.com/wafflespeanut/paperclip"

[dependencies]
paperclip-core = { path = "../../core", version = "0.4.0", optional = true }
paperclip-macros = { path = "../../macros", version = "0.5.0", features = ["actix"] }
futures = "0.3"
actix-service = "1.0"
actix-web2 = { version = "2", default-features = false, optional = true, package = "actix-web" }
actix-web3 = { version = "3", default-features = false, optional = true, package = "actix-web" }
parking_lot = ">=0.10,<0.12"
serde_json = "1.0"
once_cell = "1.4"
openapiv3 = { version = "0.4.0", optional = true }
include_dir = { version = "0.6.1", optional = true }

[features]
actix = ["actix3"]
actix2 = ["actix-web2", "paperclip-core/actix2"]
actix3 = ["actix-web3", "paperclip-core/actix3"]
nightly = ["paperclip-core/nightly"]
normalize = []
v3 = ["openapiv3"]
swagger-ui = ["include_dir"]
