[package]
name = "paperclip-actix"
version = "0.7.0"
edition = "2018"
description = "Paperclip OpenAPI plugin for actix-web framework"
documentation = "https://paperclip-rs.github.io/paperclip/paperclip_actix"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paperclip-rs/paperclip"
repository = "https://github.com/paperclip-rs/paperclip"

[dependencies]
paperclip-core = { path = "../../core", version = "0.7.0", optional = true }
paperclip-macros = { path = "../../macros", version = "0.6.3", features = ["actix"] }
futures = "0.3"
actix-service1 = { version = "1", package = "actix-service", optional = true }
actix-service2 = { version = "2", package = "actix-service", optional = true }
actix-web2 = { version = "2", default-features = false, optional = true, package = "actix-web" }
actix-web3 = { version = "3", default-features = false, optional = true, package = "actix-web" }
actix-web4 = { version = "4", default-features = false, optional = true, package = "actix-web" }
mime_guess = { version = "2.0.4", default-features = false }
serde_json = "1.0"
once_cell = "1.4"
openapiv3 = { version = "2.0", optional = true }
include_dir = { version = "0.7.2", optional = true }
tinytemplate = { version = "1.1", optional = true }

[features]
actix2 = ["actix-web2", "actix-service1", "paperclip-core/actix2"]
actix3 = ["actix-web3", "actix-service1", "paperclip-core/actix3"]
actix4 = ["actix-web4", "actix-service2", "paperclip-core/actix4"]
nightly = ["paperclip-core/nightly"]
normalize = []
v3 = ["openapiv3", "paperclip-core/v3"]
swagger-ui = ["include_dir"]
rapidoc = ["tinytemplate", "include_dir"]
