[package]
name = "test-k8s"
version = "0.0.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
http = "0.1"
lazy_static = "1.4"
log = "0.4"
mime = { git = "https://github.com/hyperium/mime" }
parking_lot = "0.8"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

[workspace]
