[package]
name = "test-k8s"
version = "0.0.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1"
failure = "0.1"
futures = "0.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"], package = "futures-preview" }
http = "0.1"
lazy_static = "1.4"
log = "0.4"
mime = { git = "https://github.com/hyperium/mime" }
parking_lot = "0.8"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio-io-old = { version = "0.1", package = "tokio-io" }
url = "2.1"

[workspace]
