[package]
name = "test-k8s"
version = "0.0.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
thiserror = "1.0"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
mime = { git = "https://github.com/hyperium/mime" }
mime_guess = "2.0"
parking_lot = "0.11"
reqwest = { version = "0.10", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio-util = { version = "0.3", features = ["codec"] }
tokio = { version = "0.2", features = ["fs", "io-util"] }
url = "2.1"

[workspace]
